# video2skill

./: .gitignore  README.md  Video2Skill_Local_Agent_总体技术报告与可行性分析_V1.0.docx  pyproject.toml
adapters/: __init__.py
adapters/bilibili/: adapter.py
adapters/local_file/: adapter.py
apps/cli/: main.py
apps/desktop/: app.py
apps/web/: app.py
configs/: defaults.json
core/: audit.py  contracts.py  evidence.py  knowledge.py  orchestrator.py
docs/design/: ARCHITECTURE.md  BRANCH_MAP.md  CONSTRAINTS.md  FEATURE_BRANCH_SPEC.md  PROJECT_INITIATION.md  PROJECT_SPEC.md  SOURCE_INSPECTION.md
docs/status/: PROJECT_STATUS.md
launcher/: main.py
tests/: test_architecture_contracts.py  test_bilibili_download.py  test_smoke.py  test_source_contracts.py  test_task_manifest.py
tools/asr/: base.py
tools/media/: bilibili.py  ffmpeg.py
tools/renderers/: markdown.py
tools/vision/: ocr.py
