[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video2skill"
version = "0.1.0"
description = "Local video knowledge extraction and Skill packaging scaffold"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]

